Renamed x86 to x64